Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: maybe implement a default message channel, very much like Erlang's
      actor model (which is cool in a lot of important aspects (failures!),
      but very lacking in others (higher level ipc)).
TODO: unready_all
TODO: myhttpd header parsing
TODO: channel->maxsize(newsize)?

	- considerably speed up Coro::Select by taking avdantage
          of AnyEvent > 4.8 and some other optimisations.
        - clarified libcoro license and copyright.
        - someone stole my EXTRA_META!!!

5.151 Mon Jul  6 05:41:57 CEST 2009
	- backport to windows process emulation code again (patch by
          Yasuhiro MATSUMOTO).
        - slightly update Coro::MakeMaker.

5.15  Tue Jun 30 10:28:06 CEST 2009
	- deprecate Coro::Socket, document how to get ipv6 support via
          AnyEvent::Socket instead.
	- implement signal->wait ($cb) interface, similar to semaphores.
        - work around SvOK not supporting getmagic, so we have to getmagic
          to test for undef :/ (reported by Matthias Waldorf).
        - load Coro::AnyEvent in all modules using AnyEvent.
        - work around perl corrupting our internal data structures,
          reported by Tokuhiro Matsuno.
        - enable per-coroutine real and cpu time gathering
          (Coro::State::enable_times).

5.14  Wed Jun 24 01:37:48 CEST 2009
	- provide explicit functions to "cede" to the event loop in Coro::AnyEvent,
          as this seems to have been a difficult concept (poll, sleep, idle,
          idle_upto).
        - add Coro::AnyEvent::readable/writable functions.
	- clarify Coro::EV/Event/AnyEvent manpages.
        - free per-thread global scalars in the thread calling ->cancel, to
          avoid crashes when $_, $@ etc., are magical but some of those
          had already been freed.
        - "unexperimentalise" the callback interface for Coro::Semaphore.